concord_macros/tests/trybuild/fail/codegen/websocket_http_post_response.rs
use concord_macros::api;

api! {
    client WebSocketHttpPostResponseApi {
        base "https://example.com"
    }

    POST Connect
        path ["connect"]
        -> WebSocket<String, String>
}

fn main() {}
